# grokforge

./: .gitignore  BUILD_PROGRESS.md  CLAUDE.md  README.md  commitlint.config.js  eslint.config.js  lint-staged.config.js  package.json  pnpm-lock.yaml
.github/: pull_request_template.md
.github/workflows/: ci.yml
apps/api/: .env.example  pyproject.toml  requirements.txt
apps/api/app/: config.py  main.py
apps/api/app/ai/: __init__.py  grok_client.py  grok_provider.py  mock_provider.py  provider.py  schemas.py  token_tracker.py
apps/api/app/models/: __init__.py  file_artifact.py  patch_artifact.py  repository.py  session.py  token_usage.py  validation_run.py
apps/api/app/routers/: branches.py  chat.py  github.py  patches.py  plans.py  repositories.py  sessions.py  tokens.py  validation.py
apps/api/app/schemas/: __init__.py  patch.py  plan.py  repository.py  session.py  validation.py
apps/api/app/services/: dependency_scanner.py  repo_scanner.py  validation_runner.py
apps/api/tests/: conftest.py  test_health.py  test_repo_scanner.py
apps/web/: package.json  pnpm-lock.yaml
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: app-sidebar.tsx  code-block.tsx  commits-list.tsx  diff-viewer.tsx  error-alert.tsx  file-tree-panel.tsx  file-tree.tsx  (+8 more)
demo-repo/: README.md  requirements.txt
demo-repo/src/: __init__.py  cache.py  formatters.py  main.py  weather_client.py
demo-repo/tests/: __init__.py  test_cache.py  test_formatters.py  test_weather_client.py
docs/: ARCHITECTURE.md  DECISIONS.md  INTERVIEW_DEMO.md  PRD.md  PROPOSALS.md
(+15 files in other folders)
